--- a/TemplasOficial.css
+++ b/TemplasOficial.css
@@ -1,15 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC|Coming+Soon|Merienda|Neucha|Nova+Mono|Permanent+Marker');
-@import url('https://fonts.googleapis.com/css?family=Mirza|Yanone+Kaffeesatz');
-@import url('https://fonts.googleapis.com/css?family=Oxygen');
-/*font-family: 'Nova Mono', monospace;
-font-family: 'Amatic SC', cursive;
-font-family: 'Permanent Marker', cursive;
-font-family: 'Merienda', cursive;
-font-family: 'Neucha', cursive;
-font-family: 'Coming Soon', cursive;
-font-family: 'Mirza', cursive;
-font-family: 'Yanone Kaffeesatz', sans-serif;
-font-family: 'Oxygen', sans-serif;*/
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+/*font-family: 'Lora', serif;
+font-family: 'Cinzel Decorative', cursive;*/
  #pop{
 display:block;
 position:relative;
@@ -25,29 +18,20 @@ opacity: 0.7;
 
 #titulo{
     font-size: 24px;
-    font-family: 'Merienda', cursive;
+    font-family: 'Cinzel Decorative', cursive;
     color: #4169E1;
 	text-shadow: 2px 2px 6px #6495ED;
 	text-align: center;
-}
-#contagem{
-	text-align: right;
-	font-family: 'Amatic SC', cursive;
-	color: #FF8C00;
-	font-size: 24px;
-	text-decoration: italic;
-	padding: 10px;
-	text-shadow: 2px 2px 6px #A52A2A;
 }
 /*#titulo::after{
     content: "TITULO GOD";
 }
 */
-/*FormataÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â§ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â£o texto geral*/
+/*Formatacao texto geral*/
 #narracao{
     text-align: justify;
     color:#FAFAD2;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Lora', serif;
     font-size: 12px;
     border-right: 2px outset #4682B4;
 	border-left: 2px outset #4682B4;
@@ -61,13 +45,27 @@ opacity: 0.7;
 
 
 /*Lista de Cores*/
-l{/*Falas do Shaanti*/
+f{/*Falas*/
     font-size: 12px;
-    color:#4682B4;
+    color:#0A6844;
 }
-pp{/*Pensamentos e citaÃƒÆ’Ã‚Â§ÃƒÆ’Ã‚Âµes de fb*/
+ff{/*Pensamentos*/
     font-size: 12px;
-    color:#8B2252;
-    font-family: 'Permanent Marker', cursive;
-    text-shadow: 1px 1px 3px #000000;
+    color:#0A6844;
+}
+/*NPCs*/
+c{
+    color: #AAB6F8;
+}
+c1{
+    color: #38BEA2;
+}
+c2{
+    color: #24bbed;
+}
+c3{
+    color: #329fb3;
+}
+c4{
+    color: #7874B0;
 }
