--- a/TemplasOficial.css
+++ b/TemplasOficial.css
@@ -3,44 +3,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 /*font-family: 'Lora', serif;
 font-family: 'Cinzel Decorative', cursive;*/
- #pop{
-display:block;
-position:relative;
-top:50%;
-left:auto%;
-padding:10px;
-width:300px;
-height:200px;
-border:1px solid #d0d0d0;
-background: #696969;
-opacity: 0.7;
+
+
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap');
+@import url('https://dl.dropbox.com/s/qm6x16r9jjlbgd4/game-icons.css');
+
+#formiga{
+	margin:0 auto;
+	width:510px;
+	text-align:justify;
+	font-size:var(--font);
+	font-family: 'Lora', serif;
+	color:#dfdfdf;
 }
 
-#titulo{
-    font-size: 24px;
-    font-family: 'Cinzel Decorative', cursive;
-    color: #4169E1;
-	text-shadow: 2px 2px 6px #6495ED;
-	text-align: center;
+#formiga .titulo{
+	margin:0 auto;
+	width:540px;
+	text-align:center;
+	color:var(--cor);
+	letter-spacing:14px;
+	border-bottom: 1px outset var(--cor);
+	font-size:var(--font-titulo);
 }
-/*#titulo::after{
-    content: "TITULO GOD";
+
+#formiga .sub{
+	letter-spacing:5px;
+	border:none;
+	font-size:var(--font-sub);
 }
-*/
-/*Formatacao texto geral*/
-#narracao{
-    text-align: justify;
-    color:#FAFAD2;
-    font-family: 'Lora', serif;
-    font-size: 12px;
-    border-right: 2px outset #4682B4;
-	border-left: 2px outset #4682B4;
-    border-radius: 15px;
-    padding: 20px 15px;
-    width: 570px;
-    box-shadow: 2px 2px 10px #FFF8DC;
-	margin-right:15px;
-	margin-left:15px;
+
+.ico{
+	margin: 0 auto;
+	width:125px;
+}
+
+.icon{
+	font-size:40px;
+	opacity:0.8;
+	margin:0;
+}
+
+#formiga dl.codebox dt {
+	color:var(--cor);
+}
+
+.cred{
+	text-align:center;
+}
+
+.cred a {
+	color:#ccc;
+	font-size:8px;
+	letter-spacing:6px;
 }
 
 
